tests/parser-test-files/bad-files/parse-while-let.9.error
error: Malformed while-let expression
  --> test:4:37
   |
 4 |  (define f (while-let :label foo = bar))
   |                                       ^ expected body
